--- a/src/index.jade
+++ b/src/index.jade
@@ -6,7 +6,7 @@ html(lang="ru")
 
 
 
-body
+    body
         header
             .wrap
                 .logo
@@ -53,12 +53,53 @@ body
 
 
 
-        div
-            h1 test djgodf
-            p.
-                ug skdf sdjhf ksdjhf ksjdhf
-                sdjfhsdkjfhsdkjlfh sdklfjh s
-                sdjlkhf skdljf h
+        div.container
+            div.popular_product
+                h3 Популярные товары
+
+
 
 
         footer
+            .wrap
+                div
+                    div.call_us
+                        h3 Позвонить нам
+                        ul
+                            li +38 (093) 52 63 954
+                            li +38 (093) 52 63 954
+
+                    .social
+                        h3 Социальные сети
+                        li.vk
+                            a(href="#")
+                        li.facebook
+                            a(href="#")
+                        li.twitter
+                            a(href="#")
+
+                div.adress
+                    h3 Где мы находимся
+                    ul
+                        li г. Черкассы, ул. Ильина 1, 2 этаж “ Кооператор”
+                        li г. Черкассы, ул. Ильина 1, 2 этаж “ Кооператор”
+
+
+
+                div
+                    div.subscription
+                        h3 Подписаться на новости
+                        form
+                            input(type='text' placeholder='mail')
+
+                    div.payment
+                        h3 Способы оплаты
+                        ul
+                            li.payment1
+                            li.privat
+                            li.visa
+                            li.paypal
+
+
+
+                p.copyright © 2016 Symonen.ko
