--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -186,6 +186,9 @@ footer
         ul
           li
             margin-bottom: 15px
+          a
+            color: #FFFFFF
+
 
 
       .social
@@ -251,6 +254,11 @@ footer
           vertical-align: middle
           background: url("../img/icons/master_card.png") no-repeat
           margin-right: 24px
+          a
+            display: block
+            height: 17px
+            color: #FFFFFF
+
 
 
           &.privat
