--- a/src/index.jade
+++ b/src/index.jade
@@ -66,8 +66,11 @@ html(lang="ru")
                     div.call_us
                         h3 Позвонить нам
                         ul
-                            li +38 (093) 52 63 954
-                            li +38 (093) 52 63 954
+                            li
+                                a(href="+380935263954") +38 (093) 52 63 954
+                            li
+                                a(href="+380935263954") +38 (093) 52 63 954
+
 
                     .social
                         h3 Социальные сети
@@ -96,9 +99,13 @@ html(lang="ru")
                         h3 Способы оплаты
                         ul
                             li.payment1
+                                a(href="#")
                             li.privat
+                                a(href="#")
                             li.visa
+                                a(href="#")
                             li.paypal
+                                a(href="#")
 
 
 
