--- a/src/category.jade
+++ b/src/category.jade
@@ -9,7 +9,7 @@ html(lang="ru")
         script(src="/js/untils.js")
 
 
-    body.home
+    body.shop
         header
 
             .wrap
@@ -60,44 +60,69 @@ html(lang="ru")
         div.container
             .wrap
 
-                ul.slider
 
-                    li
-                        img(src="img/content/slider.jpg")
-                    li
-                        img(src="img/content/slider.jpg")
+                .list_products
 
-                    li
-                        img(src="img/content/slider.jpg")
-
-
-
-
-                .popular_product
-                    h3 Популярные товары
-                    .products
-                        .product
-                            a(href="#")
-                                    .images
-                                        img(src="img/content/img1.jpg" alt="Товар 1")
-                        .product
-                            a(href="#")
-                                .images
-                                    img(src="img/content/img2.jpg" alt="Товар 2")
-                        .product
-                            a(href="#")
-                                .images
-                                    img(src="img/content/img3.jpg" alt="Товар 3")
-                        .product
-                            a(href="#")
-                                .images
-                                    img(src="img/content/img4.jpg" alt="Товар 4")
-                        .product
-                            a(href="#")
-                                .images
-                                    img(src="img/content/img5.jpg" alt="Товар 5")
-
-
+                    .product
+                        a(href="#")
+                            .images
+                                img(src="img/content/img2.jpg" alt="Товар 2")
+                            .product_name Кошелек кожаный Symonen.ko
+                            .price 390,00 UAH
+                    .product
+                        a(href="#")
+                            .images
+                                img(src="img/content/img3.jpg" alt="Товар 3")
+                            .product_name Кошелек кожаный Symonen.ko
+                            .price 390,00 UAH
+                    .product
+                        a(href="#")
+                            .images
+                                img(src="img/content/img4.jpg" alt="Товар 4")
+                            .product_name Кошелек кожаный Symonen.ko
+                            .price 390,00 UAH
+                    .product
+                        a(href="#")
+                            .images
+                                img(src="img/content/img5.jpg" alt="Товар 5")
+                            .product_name Кошелек кожаный Symonen.ko
+                            .price 390,00 UAH
+                    .product
+                        a(href="#")
+                            .images
+                                img(src="img/content/img2.jpg" alt="Товар 2")
+                            .product_name Кошелек кожаный Symonen.ko
+                            .price 390,00 UAH
+                    .product
+                        a(href="#")
+                            .images
+                                img(src="img/content/img3.jpg" alt="Товар 3")
+                            .product_name Кошелек кожаный Symonen.ko
+                            .price 390,00 UAH
+                    .product
+                        a(href="#")
+                            .images
+                                img(src="img/content/img4.jpg" alt="Товар 4")
+                            .product_name Кошелек кожаный Symonen.ko
+                            .price 390,00 UAH
+                    .product
+                        a(href="#")
+                            .images
+                                img(src="img/content/img5.jpg" alt="Товар 5")
+                            .product_name Кошелек кожаный Symonen.ko
+                            .price 390,00 UAH
+                    .product
+                        a(href="#")
+                            .images
+                                img(src="img/content/img4.jpg" alt="Товар 4")
+                            .product_name Кошелек кожаный Symonen.ko
+                            .price 390,00 UAH
+                    .product
+                        a(href="#")
+                            .images
+                                img(src="img/content/img5.jpg" alt="Товар 5")
+                            .product_name Кошелек кожаный Symonen.ko
+                            .price 390,00 UAH
 
 
 
