--- a/src/list_products.jade
+++ b/src/list_products.jade
@@ -120,6 +120,14 @@ html(lang="ru")
 
 
 
+                .pagination
+                    ul
+                        li.prev
+                            a(href="#")
+                        li.next
+                            a(href="#")
+
+
 
 footer
             .wrap
