--- a/src/category.jade
+++ b/src/category.jade
@@ -61,68 +61,45 @@ html(lang="ru")
             .wrap
 
 
-                .list_products
+                .categories
 
-                    .product
+                    .category
                         a(href="#")
                             .images
                                 img(src="img/content/img2.jpg" alt="Товар 2")
-                            .product_name Кошелек кожаный Symonen.ko
-                            .price 390,00 UAH
-                    .product
+                            .category_name Кошельки
+
+                    .category
                         a(href="#")
                             .images
                                 img(src="img/content/img3.jpg" alt="Товар 3")
-                            .product_name Кошелек кожаный Symonen.ko
-                            .price 390,00 UAH
-                    .product
+                            .category_name Галстуки
+
+                    .category
                         a(href="#")
                             .images
                                 img(src="img/content/img4.jpg" alt="Товар 4")
-                            .product_name Кошелек кожаный Symonen.ko
-                            .price 390,00 UAH
-                    .product
+                            .category_name Рубашки
+
+                    .category
                         a(href="#")
                             .images
                                 img(src="img/content/img5.jpg" alt="Товар 5")
-                            .product_name Кошелек кожаный Symonen.ko
-                            .price 390,00 UAH
-                    .product
+                            .category_name Штаны
+
+                    .category
                         a(href="#")
                             .images
                                 img(src="img/content/img2.jpg" alt="Товар 2")
-                            .product_name Кошелек кожаный Symonen.ko
-                            .price 390,00 UAH
-                    .product
+                            .category_name Рюкзаки
+
+                    .category
                         a(href="#")
                             .images
                                 img(src="img/content/img3.jpg" alt="Товар 3")
-                            .product_name Кошелек кожаный Symonen.ko
-                            .price 390,00 UAH
-                    .product
-                        a(href="#")
-                            .images
-                                img(src="img/content/img4.jpg" alt="Товар 4")
-                            .product_name Кошелек кожаный Symonen.ko
-                            .price 390,00 UAH
-                    .product
-                        a(href="#")
-                            .images
-                                img(src="img/content/img5.jpg" alt="Товар 5")
-                            .product_name Кошелек кожаный Symonen.ko
-                            .price 390,00 UAH
-                    .product
-                        a(href="#")
-                            .images
-                                img(src="img/content/img4.jpg" alt="Товар 4")
-                            .product_name Кошелек кожаный Symonen.ko
-                            .price 390,00 UAH
-                    .product
-                        a(href="#")
-                            .images
-                                img(src="img/content/img5.jpg" alt="Товар 5")
-                            .product_name Кошелек кожаный Symonen.ko
-                            .price 390,00 UAH
+                            .category_name Рюкзаки
+
+
 
 
 
