--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -98,8 +98,8 @@ header
           a
             background: #ffe400
             color: #000000
-
-
+            &:hover
+              color: #000000
 
         a
           line-height: 20px
@@ -110,9 +110,9 @@ header
           text-transform: uppercase
           text-align: center
           display: block
-
-
-
+          &:hover
+            color: #ffe400
+            text-decoration: none
 
   .cart
       display: inline-block
@@ -196,6 +196,9 @@ footer
             margin-bottom: 15px
           a
             color: #FFFFFF
+            &:hover
+              color: #ffe400
+              text-decoration: none
 
 
 
@@ -371,8 +374,10 @@ body
 
 
     .container
-      margin-top: -355px
-      margin-bottom: -145px
+
+      top: -355px
+      margin-bottom: -500px
+
 
     footer
       padding-top: 210px
@@ -381,7 +386,8 @@ body
       padding-bottom: 415px
 
     .container
-      margin-top: -350px
+      top: -350px
+      margin-bottom: -350px
 
 
 
@@ -391,6 +397,7 @@ body
       display: inline-block
       vertical-align: top
       margin: 0 16px 90px 0
+      width: 300px
       &:nth-child(3n)
         margin-right: 0
       a
@@ -433,6 +440,9 @@ body
           font-family: "SegoeUILight", sans-serif
           color: #000
           margin-bottom: 20px
+          text-overflow: ellipsis
+          white-space: nowrap
+          overflow: hidden
         .price
           font-size: 20px
           line-height: 1em
@@ -442,6 +452,9 @@ body
 
         &:hover
           text-decoration: none
+          /*.product_name
+            color: #ffe400*/
+
           .images
             &:before
               opacity: 1
@@ -486,6 +499,7 @@ body
     display: inline-block
     vertical-align: top
     margin: 0 16px 20px 0
+    width: 300px
     &:nth-child(3n)
       margin-right: 0
     a
@@ -535,6 +549,9 @@ body
         -moz-box-sizing: border-box
         box-sizing: border-box
         padding: 20px 15px
+        white-space: nowrap
+        text-overflow: ellipsis
+        overflow: hidden
 
 
 
@@ -554,3 +571,55 @@ body
             opacity: 1
             transform: translateY(0px)
             transition: all .3s ease-out
+
+
+
+
+
+.buy_page
+  margin: 105px auto 85px
+  h1
+    line-height: 1em
+    text-align: center
+    color:  #191919
+    font-size: 30px
+    margin-bottom: 90px
+    font-family: "SegoeUILight", sans-serif
+
+  .buy
+    width: 625px
+    margin: auto
+    li
+
+      width: 190px
+      margin-bottom: 70px
+      &:nth-child(2n)
+        float: right
+        clear: right
+      &:nth-child(2n+1)
+        float: left
+        clear: left
+
+
+
+
+      strong
+        color:  #191919
+        font-size: 20px
+        line-height: 1em
+        font-family: "SegoeUI-Semibold", sans-serif
+        margin-bottom: 15px
+        display: block
+
+
+      p
+        color:  #191919
+        font-size: 20px
+        line-height: 2em
+        font-family: "SegoeUILight", sans-serif
+
+
+        span
+          display: block
+          font-size: 14px
+          font-family: "SegoeUILight", sans-serif
