--- a/src/buy.jade
+++ b/src/buy.jade
@@ -60,7 +60,7 @@ html(lang="ru")
         div.container
             .wrap
 
-                .buy_page
+                .article
                     h1 Где купить
 
                     ul.buy.cf
