--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -576,17 +576,7 @@ body
 
 
 
-.buy_page
-  margin: 105px auto 85px
-  h1
-    line-height: 1em
-    text-align: center
-    color:  #191919
-    font-size: 30px
-    margin-bottom: 90px
-    font-family: "SegoeUILight", sans-serif
-
-  .buy
+.buy
     width: 625px
     margin: auto
     li
@@ -623,3 +613,37 @@ body
           display: block
           font-size: 14px
           font-family: "SegoeUILight", sans-serif
+
+
+
+
+.article
+  margin: 105px auto 85px
+  h1
+    line-height: 1em
+    text-align: center
+    color:  #191919
+    font-size: 30px
+    margin-bottom: 90px
+    font-family: "SegoeUI", sans-serif
+    font-weight: normal
+
+  h3
+    line-height: 1em
+    color:  #191919
+    font-size: 24px
+    margin-bottom: 30px
+    font-family: "SegoeUI", sans-serif
+    font-weight: normal
+    margin-top: 50px
+
+
+
+  p
+    line-height: 1.5em
+    color:  #191919
+    font-size: 16px
+    margin-bottom: 30px
+    font-family: "SegoeUI", sans-serif
+    &:last-child
+      margin-bottom: 0
