--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -647,3 +647,74 @@ body
     font-family: "SegoeUI", sans-serif
     &:last-child
       margin-bottom: 0
+
+
+  form
+    width: 538px
+    display: inline-block
+
+    input[type="text"]
+      border: 1px #adacac  solid
+      width: 538px
+      height: 48px
+      -webkit-box-sizing: border-box
+      -moz-box-sizing: border-box
+      box-sizing: border-box
+      padding: 0 15px
+      line-height: 48px
+      color: #949292
+      font-size: 18px
+      font-family: "SegoeUILight", sans-serif
+      margin-bottom: 20px
+
+
+    textarea
+      width: 538px
+      height: 108px
+      -webkit-box-sizing: border-box
+      -moz-box-sizing: border-box
+      box-sizing: border-box
+      padding: 0 15px
+      line-height: 48px
+      color: #949292
+      font-size: 18px
+      font-family: "SegoeUILight", sans-serif
+      border: 1px #adacac  solid
+      margin-bottom: 20px
+    input[type="submit"]
+        margin: auto
+        width: 123px
+        height: 43px
+        border: 1px solid #000000
+        background: none
+        display: block
+        font-size: 18px
+        -webkit-box-sizing: border-box
+        -moz-box-sizing: border-box
+        box-sizing: border-box
+        line-height: 41px
+        -webkit-transition: all 0.35s
+        -moz-transition: all 0.35s
+        -o-transition: all 0.35s
+        transition: all 0.35s
+        &:hover
+          background: #000000
+          color: #fff
+          -webkit-transition: all 0.35s
+          -moz-transition: all 0.35s
+          -o-transition: all 0.35s
+          transition: all 0.35s
+
+
+
+
+
+  ul.contact
+      float: right
+      li
+        display: block
+        color: #000
+        font-size: 20px
+        font-family: "SegoeUI", sans-serif
+        margin-bottom: 30px
+
