--- a/src/buy.jade
+++ b/src/buy.jade
@@ -117,7 +117,7 @@ footer
                     div.subscription
                         h3 Подписаться на новости
                         form
-                            input(type='text' placeholder='mail')
+                            input(type='text' placeholder='mail:')
 
                     div.payment
                         h3 Способы оплаты
