--- a/src/contacts.jade
+++ b/src/contacts.jade
@@ -63,10 +63,10 @@ html(lang="ru")
                 .article
                     h1 Контакты
                     form
-                        input(type="text" placeholder="Имя:")
-                        input(type="text" placeholder="Телефон:")
+                        input(type="text", placeholder="Имя:")
+                        input(type="text", placeholder="Телефон:")
                         textarea( placeholder="Сообщение:")
-                        input(type="submit" name="Отправить")
+                        input(type="submit", name="Отправить")
                     ul.contact
                         li Skype: Symonenko.shop
                         li Телефон: +38 (093) 526 35 69
@@ -108,7 +108,7 @@ footer
                     div.subscription
                         h3 Подписаться на новости
                         form
-                            input(type='text' placeholder='mail')
+                            input(type='text' placeholder='mail:')
 
                     div.payment
                         h3 Способы оплаты
