--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -668,6 +668,7 @@ body
       margin-bottom: 20px
 
 
+
     textarea
       width: 538px
       height: 108px
@@ -717,4 +718,84 @@ body
         font-size: 20px
         font-family: "SegoeUI", sans-serif
         margin-bottom: 30px
+
+
+
+
+
+form.payment
+  margin: 110px auto 80px
+  width: 700px
+
+  h3
+    margin-bottom: 35px
+    color: #191919
+    font-size: 24px
+    line-height: 1em
+    font-weight: normal
+    font-family: "SegoeUI", sans-serif
+    clear: both
+
+  input[type="submit"]
+    margin: auto
+    width: 123px
+    height: 43px
+    border: 1px solid #000000
+    background: none
+    display: block
+    font-size: 18px
+    -webkit-box-sizing: border-box
+    -moz-box-sizing: border-box
+    box-sizing: border-box
+    line-height: 41px
+    -webkit-transition: all 0.35s
+    -moz-transition: all 0.35s
+    -o-transition: all 0.35s
+    transition: all 0.35s
+    &:hover
+      background: #000000
+      color: #fff
+      -webkit-transition: all 0.35s
+      -moz-transition: all 0.35s
+      -o-transition: all 0.35s
+      transition: all 0.35s
+
+  input[type="text"]
+      border: 1px #adacac  solid
+      width: 338px
+      height: 48px
+      -webkit-box-sizing: border-box
+      -moz-box-sizing: border-box
+      box-sizing: border-box
+      padding: 0 15px
+      line-height: 48px
+      color: #949292
+      font-size: 18px
+      font-family: "SegoeUILight", sans-serif
+      margin-bottom: 20px
+      &:nth-child(2n)
+        margin-right: 20px
+
+  .radio
+    margin-bottom: 50px
+    > div
+      width: 50%
+      float: left
+      margin-bottom: 30px
+      label
+        cursor: pointer
+        padding-left: 40px
+        background: url("../img/icons/radio.png") no-repeat bottom left
+        line-height: 25px
+        height: 25px
+        color:  #000000
+        font-size: 18px
+        display: inline-block
+
+
+      input[type="radio"]
+        display: none
+        &:checked
+          + label
+            background-position: top left
 
