--- a/src/list_products.jade
+++ b/src/list_products.jade
@@ -162,7 +162,7 @@ footer
                     div.subscription
                         h3 Подписаться на новости
                         form
-                            input(type='text' placeholder='mail')
+                            input(type='text' placeholder='mail:')
 
                     div.payment
                         h3 Способы оплаты
